Revert use of immutable lists (necessary until kryo is upgraded)